--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,18 @@
-# Streamlit app dependencies
 streamlit
 
-# HF + training
-transformers>=4.42
-torch
-datasets
-accelerate
-sentencepiece
+# Hugging Face stack (pins known to install on Streamlit Cloud)
+transformers==4.42.4
+datasets==2.20.0
+accelerate==0.33.0
+sentencepiece==0.2.0
+
+# PyTorch CPU (stable pin)
+torch==2.2.2
+
+# Utilities
+rapidfuzz==3.9.7
 protobuf<5
-
-# Retrieval / embeddings
-faiss-cpu
-sentence-transformers
-
-# Fuzzy matching
-rapidfuzz
-
-# Data & ML utils
-pandas
-numpy
-scikit-learn
-matplotlib
-
-# Guardrails (import guardrails)
-guardrails-ai
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+matplotlib==3.8.4
